crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__string_parser_escaped_unix_eol.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..18,
            value: StringLiteral(
                ExprStringLiteral {
                    range: 0..18,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..18,
                                value: "text more text",
                                flags: StringLiteralFlags {
                                    quote_style: Single,
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
